# ancestry

./: .gitignore  .ruff.toml  .travis.yml  betty.json  betty.pot  betty.yaml  do_the_thing.py  mypy.ini  profile.stats  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
ancestry/: cli.py  console.py  report.py
ancestry/extension/: __init__.py
ancestry/plugin/: __init__.py
ancestry/plugins/: __init__.py
ancestry/plugins/reporter/: __init__.py
ancestry/plugins/reporter/resources/public/report/: index.html.j2
ancestry/tests/: conftest.py  test_betty_yaml.py
ancestry/tests/extension/: test___init__.py
ancestry/tests/locale/: test_translation.py
assets/locale/: betty.pot
assets/locale/nl-NL/: betty.po
assets/locale/nl_NL/LC_MESSAGES/: betty.mo  betty.po
assets/locale/uk/: betty.po
assets/locale/uk/LC_MESSAGES/: betty.mo  betty.po
assets/public/localized/: index.html.j2
assets/templates/: footer.html.j2
resources/locale/nl_NL/LC_MESSAGES/: betty.mo  betty.po
resources/public/: index.html.j2
resources/public/localized/: index.html.j2
resources/templates/: footer.html.j2
resources/templates/page/: base.html.j2
