[build-system]
requires = [
    'setuptools ~= 76.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ancestry'
version = '0.0.0'
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.12'
dependencies = [
    'betty ~= 0.5.0a3',
    'betty-nginx ~= 0.2.0a3',
]

[project.entry-points.'betty.command']
'report' = 'ancestry.console:Report'

[project.entry-points.'betty.extension']
'ancestry' = 'ancestry.extension:Ancestry'

[project.optional-dependencies]
development = [
    'basedmypy ~= 2.6',
    'pytest ~= 8.3',
    'pytest-asyncio ~= 0.24',
    'ruff ~= 0.9.1',
]

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.package-data]
betty = [
    'py.typed',
    'assets/**',
]

[tool.setuptools.exclude-package-data]
betty = [
    '__pycache__',
]
