[build-system]
requires = [
    'setuptools ~= 80.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ancestry'
version = '0.0.0'
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.12'
dependencies = [
    'betty ~= 0.5.0a17',
    'betty-nginx ~= 0.2.0a11',
]

[project.entry-points.'betty.command']
'report' = 'ancestry.console:Report.plugin'

[project.entry-points.'betty.extension']
'ancestry' = 'ancestry.extension:Ancestry.plugin'

[project.optional-dependencies]
development = [
    'aioresponses ~= 0.7.8',
    'basedmypy ~= 2.6',
    'pytest ~= 8.3',
    'pytest-asyncio ~= 1.1',
    'ruff ~= 0.14.0',
]

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.package-data]
betty = [
    'py.typed',
    'assets/**',
]

[tool.setuptools.exclude-package-data]
betty = [
    '__pycache__',
]
