[build-system]
requires = [
    'setuptools ~= 80.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ancestry'
version = '0.0.0'
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.12'
dependencies = [
    'betty ~= 0.4.9',
    'betty-nginx ~= 0.1.0',
]

[project.entry-points.'betty.command']
'report' = 'ancestry.cli:Report'

[project.entry-points.'betty.extension']
'ancestry' = 'ancestry.extension:Ancestry'

[project.optional-dependencies]
development = [
    'basedmypy ~= 2.6',
    'pytest ~= 9.0',
    'pytest-asyncio ~= 1.1',
    'ruff ~= 0.15.1',
    'types-click ~= 7.1, >= 7.1.8',
]

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.package-data]
betty = [
    'py.typed',
    'assets/**',
]

[tool.setuptools.exclude-package-data]
betty = [
    '__pycache__',
]
